# fastapi-example

./: app.py  database.db  main.py  pyproject.toml
